K8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-service-portal
  namespace: ssp
  labels:
    app: self-service-portal
spec:
  type: ClusterIP
  selector:
    app: self-service-portal
  ports:
    - name: http
      port: 80
      targetPort: 5000
