K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: self-service-portal
  namespace: ssp
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: ssp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: self-service-portal
                port:
                  number: 80
